--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,6 +1,6 @@
 %header
-  .nav.nav-left.nav-fullleft
-    = button_tag(class: "btn btn-nav btn-large   btn-logo btn-margin") do
+  .nav.nav-left.nav-fullLeft
+    = button_tag(class: "btn btn-nav btn-large btn-logo btn-margin", id: "brand-logo") do
       BIG
       %br
       CORP.
@@ -17,5 +17,17 @@
       %li.nav-link
         = link_to contact_path do
           %span contact
-    .contact-card
-      .yolo
+    .company-info
+      .company-card
+        %p.title
+          Big Corporation
+        %p.address
+          530 N Lake Shore Drive
+          %br
+          Chicago, IL, 60611
+        %p.contact
+          (847)942-1853
+          %br
+          hello@bigcorp.io
+        %p.copyright
+          Copyright © 2016
