--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Playfair+Display:400,700);
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700);
 
 // Globals
 
@@ -13,7 +13,6 @@
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
-// @import "jquery.fullPage";
 
 // Framework
 
