--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,4 +1,4 @@
-%section.section.section-clearLeft.home
+%section.section.section-clearLeft#home
   .row.row-fill
     .col.col-sm-12of12.col-md-10of12.col-centered
       .content
