--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -2,6 +2,13 @@
   padding-top: 15%;
   text-align: center;
 
+  canvas {
+    left: 0;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+  }
+
   .content {
 
     font-family: 'Futura Condensed';
