--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -39,6 +39,8 @@ $base-transition: 0.2s;
   $light-green: #24C2AF;
   $dark-green: #1C9C8D;
 
+  $theme-blue: #009ACD;
+
   // Grayscale //
 
   $transparent : transparent;
