--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -2,6 +2,29 @@ header {
   display: inline-block;
   height: 100%;
 
+  .btn {
+    &.btn-logo {
+      border-radius: $btn-radius;
+      left: $base-padding;
+      position: absolute;
+      top: $base-padding;
+      transition: color 0.3s;
+      z-index: 1;
+
+      &:hover {
+        color: $theme-blue;
+      }
+    }
+
+    &.btn-hamburger {
+      right: $base-padding;
+      position: absolute;
+      top: $base-padding;
+      transition: color 0.3s;
+      z-index: 1;
+    }
+  }
+
   .nav-left {
     background-color: transparent;
     height: 100%;
@@ -15,12 +38,6 @@ header {
       border-radius: $btn-radius;
       height: 100%;
       width: 100%;
-
-      .btn.btn-logo {
-        border-radius: 0;
-        border-bottom-right-radius: $btn-radius;
-        position: static;
-      }
 
       .nav-links {
         background-color: transparent;
