--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -1,8 +1,10 @@
 #home {
-  padding-top: 15%;
+  height: 100%;
   text-align: center;
+  width: 100%;
 
   canvas {
+    background-color: white;
     left: 0;
     position: absolute;
     top: 0;
@@ -14,12 +16,11 @@
     font-family: 'Futura Condensed';
 
     h1 {
-
-      span {
-      }
     }
 
-    h3 {
+    h5 {
+      font-family: 'Playfair Display';
+      line-height: 1.4;
       margin: 30px;
     }
   }
