--- a/app/assets/stylesheets/fonts/_fonts.scss
+++ b/app/assets/stylesheets/fonts/_fonts.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,700);
+
 @font-face {
   font-family: 'Futura Condensed';
   src: asset-url('fonts/futura/FuturaCondensed-Lighter.otf') format('opentype');
