--- a/app/assets/stylesheets/framework/_settings.scss
+++ b/app/assets/stylesheets/framework/_settings.scss
@@ -208,7 +208,10 @@ $btn-border: 0 !default;
 $btn-color: $color-primary !default;
 $btn-radius: $base-radius !default;
 
-$btn-hamburger-bar: 3px;
+$btn-hamburger-bar: 3px !default;
+$btn-hamburger-bar-spacing: 19.0983005625% !default; // (1 - $golden-inverse) * 0.5 * 100%
+$btn-hamburger-color: $black !default;
+$btn-hamburger-prompt-color: $black !default;
 
 // . Navbar
 // - - - - - - - - - - - - - - - - - - - - - - - - -
