--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,29 +1,8 @@
 %section.section.section-clearLeft#home
-  .row.row-fill
+  .row.row-fill.row-centered
     .col.col-sm-12of12.col-md-10of12.col-centered
       .content
         %h1
-          WE ARE
-          %br
-          %span BIG CORPORATION
-        %h3 I'm Chris.
-%section.section.section-clearLeft
-  .row.row-fill
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      4
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      3
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      2
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      1
-%section.section.section-clearLeft
-  .row.row-fill
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      4
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      3
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      2
-    .col.col-sm-12of12.col-lg-3of12.heightz
-      1
+          MAKE PEOPLE CARE
+        %h5
+          Big Corporation is a collective of digital professionals that connects the world to you.
