--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,10 +1,12 @@
 %header
+  = button_tag(class: "btn btn-nav btn-large btn-logo", id: "brand-logo") do
+    BIG
+    %br
+    CORP.
+
+  = render partial: "framework/buttons/hamburger", style: "float: right;"
   .nav.nav-left.nav-fullLeft
     .nav-wrapper
-      = button_tag(class: "btn btn-nav btn-large btn-logo", id: "brand-logo") do
-        BIG
-        %br
-        CORP.
       %ul.nav-links
         %li.nav-link
           = link_to home_path, class: "active" do
