--- a/app/assets/stylesheets/framework/mixins/_standards.scss
+++ b/app/assets/stylesheets/framework/mixins/_standards.scss
@@ -26,6 +26,8 @@
       height: 100%;
     }
     &Left {
+      @include hide($append: true);
+
       @include rem(padding-left, $navbar-width);
       width: 100%;
     }
