--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -8,8 +8,6 @@ header {
       left: $base-padding;
       position: absolute;
       top: $base-padding;
-      transition: color 0.3s;
-      z-index: 1;
 
       &:hover {
         color: $theme-blue;
@@ -20,7 +18,6 @@ header {
       right: $base-padding;
       position: absolute;
       top: $base-padding;
-      transition: color 0.3s;
       z-index: 1;
     }
   }
@@ -59,7 +56,7 @@ header {
             color: $light-gray;
             @include rem(font-size, $font-size);
             text-decoration: none;
-            transition: color $transition-time $transition-function;
+            @include transition(color);
 
             &:hover:not(.active) {
               color: $gray;
