--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,5 +1,29 @@
-%nav.menu
-  %ul.list.list-menu
-    %li.list_item.list_item-menu HOME
-    %li.list_item.list_item-menu ABOUT
-    %li.list_item.list_item-menu WORDS
+.nav.nav-left.nav-fullLeft.show-lgUp
+  .nav-wrapper
+    %ul.nav-links
+      %li.nav-link
+        = link_to home_path, class: "#{'active' if action_name == 'home'}" do
+          %span Home
+      %li.nav-link 
+        = link_to work_path, class: "#{'active' if action_name == 'work'}" do 
+          %span Work
+      %li.nav-link
+        = link_to about_path, class: "#{'active' if action_name == 'about'}" do 
+          %span About
+      %li.nav-link
+        = link_to contact_path, class: "#{'active' if action_name == 'contact'}" do
+          %span Contact
+    .company-info
+      .company-card
+        %p.title
+          Big Corporation Digital
+        %p.address
+          530 N Lake Shore Drive
+          %br
+          Chicago, IL, 60611
+        %p.contact
+          (847) 942-1853
+          %br
+          hello@bigcorp.io
+        %p.copyright
+          Copyright © 2016
