--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,8 +1,8 @@
-%section.section.section-clearLeftLargeUp#home
+%section.section.section-clearLeftLg.section-clearLeftXl#home
   .row.row-fill.row-centered
     .col.col-sm-12of12.col-md-10of12.col-centered
       .content
         %h1
           MAKE PEOPLE CARE
         %h5
-          Big Corporation is a collective of digital professionals that connects the world to you.
+          Big Corporation is a collective of digital professionals that connect the world to you.
