--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,4 +1,4 @@
-.nav.nav-left.nav-fullLeft.show-lgUp
+%nav.nav.nav-left.nav-fullLeft.show-lgUp
   .nav-wrapper
     %ul.nav-links
       %li.nav-link
@@ -18,9 +18,9 @@
         %p.title
           Big Corporation Digital
         %p.address
-          530 N Lake Shore Drive
+          300 N Canal Street
           %br
-          Chicago, IL, 60611
+          Chicago, IL, 60606
         %p.contact
           (847) 942-1853
           %br
