mobile responsiveness for menu

--- a/app/assets/stylesheets/framework/_settings.scss
+++ b/app/assets/stylesheets/framework/_settings.scss
@@ -212,7 +212,7 @@ $btn-color: $color-primary !default;
 $btn-radius: $base-radius !default;
 
 $btn-hamburger-bar: 3px !default;
-$btn-hamburger-bar-spacing: 19.0983005625% !default; // (1 - $golden-inverse) * 0.5 * 100%
+$btn-hamburger-bar-spacing: 20% !default; // (1 - $golden-inverse) * 0.5 * 100%
 $btn-hamburger-color: $black !default;
 $btn-hamburger-prompt-color: $black !default;
 
