--- a/app/views/framework/buttons/_hamburger.html.haml
+++ b/app/views/framework/buttons/_hamburger.html.haml
@@ -1,4 +1,4 @@
-= button_tag(class: "btn btn-nav btn-square btn-colorPrimary btn-hamburger btn-right btn-margin btn-noText hidden-lgUp", data: { behavior: "toggle-menu" }) do
-  = content_tag(:span, "", class: "btn-hamburger_bar")
-  = content_tag(:span, "MENU", class: "btn-hamburger_prompt")
-  = content_tag(:span, "CLOSE", class: "btn-hamburger_prompt btn-hamburger_prompt-active")
+= mobile_only ||= false
+
+= button_tag(class: "btn btn-nav btn-square btn-topRight btn-margin #{'hide-lgUp' if mobile_only}", data: { behavior: "toggle-menu" }) do
+  .btn-hamburger
