--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,4 +1,4 @@
-%nav.nav.nav-left.nav-fullLeft.show-lgUp
+%nav.nav.menu.nav-left.nav-fullLeft.show-lgUp
   .nav-wrapper
     %ul.nav-links
       %li.nav-link
