--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -3,6 +3,6 @@
     .col.col-sm-12of12.col-md-10of12.col-centered
       .content
         %h1
-          MAKE PEOPLE CARE
+          MAKE PEOPLE CAREZ
         %h5
           Big Corporation is a collective of digital professionals that connect the world to you.
