--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -14,16 +14,18 @@
         = link_to contact_path, class: "#{'active' if action_name == 'contact'}" do
           %span Contact
     .company-info
-      .company-card
-        %p.title
+      .company-card{ itemscope: true, itemtype: 'http://schema.org/Organization' }
+        %p.title{ itemprop: 'name' }
           Big Corporation Digital
-        %p.address
-          300 N Canal Street
+        %p.address{ :itemprop => 'address', itemscope: true, itemtype: 'http://schema.org/PostalAddress' }
+          %span{ itemprop: 'streetAddress' } 300 N Canal Street
           %br
-          Chicago, IL, 60606
+          %span{ itemprop: 'addressLocality' } Chicago, 
+          %span{ itemprop: 'addressRegion' } IL, 
+          %span{ itemprop: 'postalCode' } 60606
         %p.contact
-          (847) 942-1853
+          %span{ itemprop: 'telephone' } (847) 942-1853
           %br
-          hello@bigcorp.io
+          %span{ itemprop: 'email' } chris@bigcorp.io
         %p.copyright
           Copyright © 2016
