--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,6 +1,6 @@
 $nav-links-margin: (
-  sm: 125px,
-  md: 125px,
+  sm: 75px,
+  md: 100px,
   lg: 150px,
   xl: 250px
 );
@@ -23,14 +23,14 @@ header {
   .nav-left {
     background-color: transparent;
     height: 100%;
-    padding: $base-padding;
+    padding: 0;
     position: relative;
     text-align: left;
 
     .nav-wrapper {
       background-color: white;
       border: $btn-radius solid $black;
-      border-radius: $btn-radius;
+      border-radius: 0;
       height: 100%;
       width: 100%;
 
@@ -115,6 +115,14 @@ header {
 
         &-left, &-right {
           @include rem(width, scale-navbar($navbar-width-vertical, $modifier));
+        }
+
+        @if $viewport != md {
+          padding: $base-padding;
+
+          .nav-wrapper {
+            border-radius: $btn-radius;
+          }
         }
 
         .nav-wrapper {
