--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -29,7 +29,7 @@ header {
 
     .nav-wrapper {
       background-color: white;
-      border: $btn-radius solid $black;
+      border: 0 solid $black;
       border-radius: 0;
       height: 100%;
       width: 100%;
@@ -122,6 +122,7 @@ header {
 
           .nav-wrapper {
             border-radius: $btn-radius;
+            border-width: $btn-radius;
           }
         }
 
