--- a/app/views/main_pages/contact.html.haml
+++ b/app/views/main_pages/contact.html.haml
@@ -1,2 +1,6 @@
-%p
-  coming soon
+%section.section.section-clearLeftLg.section-clearLeftXl#contact
+  .row.row-fill.row-centered
+    .col.col-sm-12of12.col-md-10of12.col-centered
+      .content
+        %h5
+          Coming soon
