Add padding to sections

--- a/app/assets/stylesheets/framework/_settings.scss
+++ b/app/assets/stylesheets/framework/_settings.scss
@@ -234,3 +234,11 @@ $navbar-position-right: (top: 0, right: 0, bottom: 0) !default;
 $navbar-position-bottom: (right: 0, bottom: 0, left: 0) !default;
 $navbar-position-left: (top: 0, bottom: 0, left: 0) !default;
 
+// . Section
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+
+$section-padding: $base-padding !default;
+$section-height: 100% !default;
+$section-width: 100% !default;
+
+
